- CSS changes for improved UI on mobile - Prefer Not to Answer distinguished from scale options - Replaced Tango Card image - Bolded titles on Current Session pages - Minor edits to Meet the Team page - Minor edit to Recognition Ratings Exercise - Minor spelling correction on Attrition page - Minor visual edits to AnxietyIdentity and Eligibiliy

--- a/core/src/main/resources/static/css/mindtrails.css
+++ b/core/src/main/resources/static/css/mindtrails.css
@@ -19,7 +19,7 @@ body {font-family: 'Source Sans Pro', sans-serif; font-size:20px; box-sizing:bor
     background: transparent;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 1000px) {
 .navbar-default .navbar-nav .open .dropdown-menu>li>a {
     color: #FFFFFF;
 }
